Fix remove code entry

--- a/Course/04_pandas.ipynb
+++ b/Course/04_pandas.ipynb
@@ -668,7 +668,7 @@
     "tags": []
    },
    "source": [
-    "## Boolean Data Selection",
+    "## Boolean Data Selection\n",
     "Alternative is to just exclude the affected rows with `dropna`"
    ]
   },
@@ -859,9 +859,42 @@
    "outputs": [],
    "source": [
     "from scipy.stats import ttest_ind\n",
-    "# Calculate the ttest value for the numberofresponses of cheaters and non-cheaters\n",
+    "# Calculate the ttest value for the numberofresponses of cheaters and non-cheaters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true,
+    "remove_code": "non-comments",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Calculate the mean and std of number of responses for cheaters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Calculate the mean and std of number of responses for non-cheaters\n",
+    "non_cheaters_mean = non_cheaters['Numberofresponses'].mean()\n",
+    "non_cheaters_std = non_cheaters['Numberofresponses'].std()\n",
     "\n",
-    "# Calculate the mean and std of number of responses for cheaters and non-cheaters\n"
+    "print(f\"Non-Cheaters: Mean = {non_cheaters_mean}, Std = {non_cheaters_std}\")"
    ]
   },
   {
@@ -916,7 +949,7 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
-    "remove_code": "after:# Correct value to min if True",
+    "remove_code": "after:# Apply the function to the cheated values and create a new column ImputedResponses",
     "slideshow": {
      "slide_type": ""
     },
@@ -928,6 +961,12 @@
     "\n",
     "# Implement a function by checking if value higher than the min of value + next 4\n",
     "# Correct value to min if True\n",
+    "def enforce_monotonicity(array):\n",
+    "    corrected_array = array.copy()\n",
+    "    for i in range(1, len(array)-1):\n",
+    "        if corrected_array[i] > np.min(corrected_array[i:]):\n",
+    "            corrected_array[i] = np.min(corrected_array[i:])\n",
+    "    return corrected_array\n",
     "\n",
     "# Apply the function to the cheated values and create a new column ImputedResponses\n",
     "\n",
@@ -955,7 +994,6 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
-    "remove_code": "non-comments",
     "slideshow": {
      "slide_type": ""
     },
@@ -964,12 +1002,24 @@
    "outputs": [],
    "source": [
     "# Create a new matplotlib figure to check that the function was successful\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 4), sharey=True)\n",
     "\n",
     "# Create DataFrame view with cheaters\n",
+    "cheaters = df_work[cheater_sel]\n",
     "\n",
     "# Plot Original Data\n",
+    "ax1.scatter(cheaters.index, cheaters['Numberofresponses'], color='red')\n",
+    "ax1.set_title('Original Data')\n",
+    "ax1.set_xlabel('Index')\n",
+    "ax1.set_ylabel('Number of Responses')\n",
     "\n",
-    "# Plot Imputed Data\n"
+    "# Plot Imputed Data\n",
+    "ax2.scatter(cheaters.index, cheaters['ImputedResponses'], color='blue')\n",
+    "ax2.set_title('Imputed Data')\n",
+    "ax2.set_xlabel('Index')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -991,7 +1041,6 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
-    "remove_code": "non-comments",
     "slideshow": {
      "slide_type": ""
     },
@@ -1000,8 +1049,34 @@
    "outputs": [],
    "source": [
     "# Recreate the analysis with the imputed data\n",
+    "cheaters = df_work[df_work['cheated'] == 1]\n",
+    "non_cheaters = df_work[df_work['cheated'] == 0]\n",
+    "t_stat, p_value = ttest_ind(cheaters['ImputedResponses'], non_cheaters['ImputedResponses'])\n",
     "\n",
-    "# Calculate the mean and std of number of responses for cheaters and non-cheaters\n"
+    "print(f\"T-statistic: {t_stat}, P-value: {p_value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Calculate the mean and std of number of responses for cheaters and non-cheaters\n",
+    "cheaters_mean = cheaters['ImputedResponses'].mean()\n",
+    "cheaters_std = cheaters['ImputedResponses'].std()\n",
+    "non_cheaters_mean = non_cheaters['ImputedResponses'].mean()\n",
+    "non_cheaters_std = non_cheaters['ImputedResponses'].std()\n",
+    "\n",
+    "print(f\"Cheaters: Mean = {cheaters_mean}, Std = {cheaters_std}\")\n",
+    "print(f\"Non-Cheaters: Mean = {non_cheaters_mean}, Std = {non_cheaters_std}\")"
    ]
   },
   {
@@ -1111,7 +1186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teaching_data_analysis",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
