--- a/Course/05_Conclusion_Outlook.ipynb
+++ b/Course/05_Conclusion_Outlook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": true,
+    "editable": false,
     "slideshow": {
      "slide_type": ""
     },
@@ -21,7 +21,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "editable": false
    },
    "source": [
     "# Some lessons I learned painfully\n",
@@ -46,7 +47,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": true,
+    "editable": false,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -61,7 +62,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "editable": false
    },
    "source": [
     "## [SciPy.optimize](https://docs.scipy.org/doc/scipy/reference/optimize.html)\n",
@@ -78,7 +80,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "editable": false
    },
    "source": [
     "## [JAX](https://jax.readthedocs.io/en/latest/)\n",
@@ -89,7 +92,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "source": [
     "## [Seaborn](https://seaborn.pydata.org/)\n",
     " - Based on Matplotlib\n",
@@ -99,7 +104,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "source": [
     "## [Plotly (for Python)](https://plotly.com/python/)\n",
     " - Data visualisation library focused on buildings interactive plots\n",
@@ -109,7 +116,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "source": [
     "## [Vega-Altair](https://altair-viz.github.io/index.html#)\n",
     " - A newer data visualisation library built around a 'simpler' interface\n",
@@ -119,7 +128,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "source": [
     "## [scikit-learn](https://scikit-learn.org/stable/index.html)\n",
     " - The **go to** Python library for introductory machine learning\n",
@@ -131,7 +142,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "editable": false
    },
    "source": [
     "# All the specialised libraries from your field \n",
@@ -143,7 +155,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "editable": false
    },
    "source": [
     "# Finally, Fill in your attendance and do the evaluation\n",
@@ -153,7 +166,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": false
+   },
    "source": []
   }
  ],
