--- a/Course/04_pandas.ipynb
+++ b/Course/04_pandas.ipynb
@@ -918,7 +918,6 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
-    "remove_code": "non-comments",
     "slideshow": {
      "slide_type": ""
     },
@@ -926,7 +925,12 @@
    },
    "outputs": [],
    "source": [
-    "# Create a plot of index versus number of responses, color by the cheated column\n"
+    "# Create a plot of index versus number of responses, color by the cheated column\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(10, 3))\n",
+    "ax.scatter(df.index, df['Numberofresponses'], c=df['cheated'], cmap='coolwarm')\n",
+    "ax.set_xlabel('Index in dataset')\n",
+    "ax.set_ylabel('Number of responses');"
    ]
   },
   {
