Update slide types and make slide for field-specific libraries more general

--- a/Filled_Course/05_Conclusion_Outlook.ipynb
+++ b/Filled_Course/05_Conclusion_Outlook.ipynb
@@ -19,9 +19,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# Some lessons I learned painfully\n",
@@ -59,9 +61,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "## [SciPy.optimize](https://docs.scipy.org/doc/scipy/reference/optimize.html)\n",
@@ -76,9 +80,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "## [JAX](https://jax.readthedocs.io/en/latest/)\n",
@@ -89,7 +95,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "## [Seaborn](https://seaborn.pydata.org/)\n",
     " - Based on Matplotlib\n",
@@ -99,7 +111,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "## [Plotly (for Python)](https://plotly.com/python/)\n",
     " - Data visualisation library focused on buildings interactive plots\n",
@@ -109,7 +127,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "## [Vega-Altair](https://altair-viz.github.io/index.html#)\n",
     " - A newer data visualisation library built around a 'simpler' interface\n",
@@ -119,7 +143,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "## [scikit-learn](https://scikit-learn.org/stable/index.html)\n",
     " - The **go to** Python library for introductory machine learning\n",
@@ -129,21 +159,25 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# All the specialised libraries from your field \n",
-    "(Sorry I could only list the ones from Chemistry/Crystallography)"
+    "Have a look, one of the big strengths of python is its large ecosystem."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# Finally, Fill in your attendance and do the evaluation\n",
@@ -173,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
