Update welcome notebook for new run method
Updates 01_Welcome.ipynb to remove old information about JupyterNotebook setup alternatives and just reference the new default method (JupyterLite)

--- a/Filled_Course/01_Welcome.ipynb
+++ b/Filled_Course/01_Welcome.ipynb
@@ -36,45 +36,12 @@
     }
    },
    "source": [
-    "# Setting up your Python environment\n",
-    "Use one of these possibilities:\n",
-    " - https://notebooks.dmaitre.phyip3.dur.ac.uk/arc --> The Jupyter Notebook server set up by Daniel Maitre from the Physics department (log in with your CIS account; the loading process may take some time).\n",
-    " - Your own Jupyter Notebook or Jupyter Lab --> If you haven't installed either of them yet, you can do so using pip (Python's package manager) or Conda (a package manager from Anaconda). See an installation script example in the attachment if you already have conda in your system, or follow the installation steps for pip on https://jupyter.org/install.\n",
-    " - https://colab.research.google.com/ --> Google Colaboratory is a free cloud-based service hosted by Google. You don't need to worry about installing, all necessary libraries are already provided in the cloud."
+    "# The Python Environment\n",
+    "For this course we are using [JupyterLite](https://jupyterlite.readthedocs.io/en/stable/), which is a tool that allows us to launch [JupyterLab](https://jupyterlab.readthedocs.io/en/latest/) and run our Python code in the web browser through these notebook (.ipynb) files.\n",
+    "\n",
+    "\n",
+    "NOTE: The first time you run your code/new modules, there may be a small wait while the module is loaded."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Getting the Data\n",
-    "\n",
-    "- Access https://github.com/DurhamARC-Training/DataAnalysisPython and download the `Course` directory\n",
-    "- The `Filled_Course` directory contains the filled in exercises for your reference\n",
-    "- There is also a Python script which downloads everything (including the filled notebook) as a ZIP archive and extracts to a folder, if GIT isn't an available option for you:\n",
-    "\n",
-    "  You can execute \n",
-    "  ```bash\n",
-    "  wget https://raw.githubusercontent.com/DurhamARC-Training/DataAnalysisPython/main/pull_files_from_repo_dap.py && python pull_files_from_repo_dap.py\n",
-    "  ```\n",
-    "\n",
-    "  This will automatically\n",
-    "\n",
-    "  a. Download the `pull_files_from_repo_dap.py` file and put it into your environment.\n",
-    "\n",
-    "  b. Execute `python pull_files_from_repo_dap.py` in the folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
