Update course tutor in 01_Welcome.ipynb
Updates course tutor names in in 01_Welcome,ipynb for next date

--- a/Filled_Course/01_Welcome.ipynb
+++ b/Filled_Course/01_Welcome.ipynb
@@ -13,7 +13,7 @@
     "# Data Analysis with Python\n",
     "\n",
     "## Course by Advanced Research Computing\n",
-    "Tutors: Dmitry Nikolaenko, Jordan Byers, Paul Niklas Ruth, Thomas Flynn"
+    "Tutors: Paul Niklas Ruth, Jordan Byers, Samantha Finnigan, Dmitry Nikolaenko"
    ]
   },
   {
