--- a/Filled_Course/01_Welcome.ipynb
+++ b/Filled_Course/01_Welcome.ipynb
@@ -39,6 +39,15 @@
     "# The Python Environment\n",
     "For this course we are using [JupyterLite](https://jupyterlite.readthedocs.io/en/stable/), which is a tool that allows us to launch [JupyterLab](https://jupyterlab.readthedocs.io/en/latest/) and run our Python code in the web browser through these notebook (.ipynb) files.\n",
     "\n",
+    "To access and run the course materials, start by:\n",
+    "\n",
+    "Navigating to the course materials on our GitHub page: \n",
+    "\n",
+    "https://durhamarc-training.github.io/DataAnalysisPython/\n",
+    "\n",
+    "On the left side bar\n",
+    " - find and open the \"Courses\" folder\n",
+    " - open the file \"01_Welcome.ipynb\"\n",
     "\n",
     "NOTE: The first time you run your code/new modules, there may be a small wait while the module is loaded."
    ]
