Increase prefilled content in Matplotlib section

--- a/Course/03_Matplotlib_exercise.ipynb
+++ b/Course/03_Matplotlib_exercise.ipynb
@@ -57,6 +57,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1700644d-c22e-4953-93b8-23a2e4fc121d",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "**JSON (JavaScript Object Notation)** is a lightweight, text-based data interchange format that's easy for humans to read and write. Despite its name, JSON is language-independent and widely used for data storage and exchange.\n",
+    "\n",
+    "The `json.load()` function:\n",
+    "- Reads JSON data from a file object and converts it to Python data structures\n",
+    "- JSON objects become Python dictionaries\n",
+    "- JSON arrays become Python lists\n",
+    "\n",
+    "This is particularly useful for loading structured data like the Anscombe datasets we'll be working with."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "372825d9-d59a-4a8d-bd62-d47c4049d4bf",
@@ -96,6 +113,35 @@
    "source": [
     "#### 2) Using np.polyfit to generate a linear fit\n",
     "A linear fit is a polynomial of grade 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ff7c99-7c3c-4a50-8aaa-5b259599ccd7",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "`np.polyfit()` is a NumPy function that performs polynomial fitting to data points. It finds the coefficients of a polynomial of specified degree that best fits the data using least squares regression.\n",
+    "\n",
+    "**Basic Usage**:\n",
+    "- **Simple fit**: `coefficients = np.polyfit(x, y, degree)`\n",
+    "- **Full output**: `coefficients, residuals, rank, singular_values = np.polyfit(x, y, degree, full=True)`\n",
+    "\n",
+    "**Parameters**:\n",
+    "- `x`, `y`: Input data points (arrays)\n",
+    "- `degree`: Degree of the polynomial (1 for linear, 2 for quadratic, etc.)\n",
+    "- `full=True`: Returns additional fitting statistics including residuals\n",
+    "\n",
+    "**For Linear Regression (degree=1):**\n",
+    "- Returns coefficients `[m, b]` for equation `y = mx + b`\n",
+    "- With `full=True`, also returns sum of squared residuals (measure of fit quality)\n",
+    "\n",
+    "**Companion Functions**:\n",
+    "- `np.polyval(coefficients, x)`: Evaluates the polynomial at given x values\n",
+    "- Useful for plotting the fitted line: `y_fit = np.polyval(coefficients, x_data)`\n",
+    "\n",
+    "This function is particularly useful for analysing relationships in data and creating trend lines for visualisation."
    ]
   },
   {
@@ -143,7 +189,7 @@
     "### **Task** for Exercise 1:\n",
     "We can use [`np.polyfit`](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html) for a simple linear regression. Use this to visualise and fit [Anscombe's quartett](https://www.jstor.org/stable/2682899?seq=4) (compare your results with figures 1-4 in the article) using the data located in `exercise_data/anscombe.json`.\n",
     "\n",
-    "Visualise the points as scatter plots and show the regression line. Give labels to the axes and try to vary the colors of the individual components. If you want, you can also create a separate plot for the fitting statistics. For the reference about the plot types in Matplotlib (including scatter plots) look [here](https://matplotlib.org/stable/plot_types/index.html)."
+    "Visualise the points as scatter plots and show the regression line. Give labels to the axes and try to vary the colours of the individual components. Use `np.polyval()` to evaluate the fitted polynomial and create the regression line for plotting. If you want, you can also create a separate plot for the fitting statistics. For the reference about the plot types in Matplotlib (including scatter plots) look [here](https://matplotlib.org/stable/plot_types/index.html)."
    ]
   },
   {
@@ -160,21 +206,66 @@
    },
    "outputs": [],
    "source": [
-    "# Your solution here\n"
+    "### Your solution here\n",
+    "\n",
+    "# Create a figure and subplots for the regression lines\n",
+    "\n",
+    "# Create a figure and subplot for the fitting statistics\n",
+    "\n",
+    "# Create scatter plots for every regression line\n",
+    "\n",
+    "# Adjust the spacing between subplots\n",
+    "\n",
+    "# Show the plot\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "026ffe9b-ce7d-4256-bd6e-ad9e7e98f77e",
+   "id": "def4a413-c919-4fc0-ae19-40d13a5ca8a5",
    "metadata": {
-    "editable": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
+    "editable": false
    },
    "source": [
-    "## Exercise 2: Create your own style"
+    "## Exercise 2: Create different types of visualisations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cca243a1-cb60-4315-8ed6-10bcdebd9796",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "### Preparation for Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5ed0ae2-d297-4cd1-a16c-e143e064347b",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "Before starting Exercise 2, let's briefly introduce some additional Matplotlib plotting functions. For subplots created with `fig, axes = plt.subplots()`, you get access to each of them using the notation `axes[i,j]` at row `i` and column `j` (for 2D subplot grids). On each of them, you can choose which type of visualisations to create:\n",
+    "\n",
+    "**`axes[i,j].hist()`** - Creates histograms to show the distribution of data:\n",
+    "- Shows frequency of values in bins\n",
+    "- Useful for understanding data distribution\n",
+    "- Basic usage: `ax.hist(data, bins=number_of_bins)`\n",
+    "\n",
+    "**`axes[i,j].scatter()`** - Creates scatter plots to show relationships between two variables:\n",
+    "- Each point represents a data pair (x, y)\n",
+    "- Useful for showing correlations and patterns\n",
+    "- Basic usage: `ax.scatter(x_data, y_data)`\n",
+    "- Can customise with colours, sizes, and markers\n",
+    "\n",
+    "**`axes[i,j].matshow()`** - Displays 2D arrays as images/heatmaps:\n",
+    "- Each array element becomes a coloured pixel\n",
+    "- Useful for visualising matrices, grids, or 2D functions\n",
+    "- Basic usage: `ax.matshow(2d_array)`\n",
+    "- Colours represent different values in the array\n",
+    "\n",
+    "These functions, combined with `axes[i,j].plot()`, give you a versatile toolkit for creating different types of visualisations in your scientific figures."
    ]
   },
   {
@@ -188,9 +279,72 @@
     "tags": []
    },
    "source": [
-    "### **Task 1**: Create a mock of graphs from your field\n",
+    "### **Task** for Exercise 2: Create a mock of graphs from your field\n",
     "\n",
-    "Create a selection of graphs using `np.linspace`, `np.random.rand` and the NumPy functions that are somewhat representative of a figure you might publish."
+    "Create a selection of graphs using `np.linspace`, `np.random.rand` and the NumPy functions that are somewhat representative of a figure you might publish. Use Matplotlib functions such as `subplots()`, `plot()`, `hist()`, `scatter()`, and `matshow()` to create different types of visualisations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2786cb3-93f6-4753-a902-4fbfb8294334",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "#### 1) Examples of NumPy functions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03931940-804c-4805-aa8f-55fbc51595a3",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "- `np.exp` for exponential function,\n",
+    "- `np.sqrt` for square root function,\n",
+    "- `np.sin` for sine function\n",
+    "- `np.cos` for cosine function\n",
+    "- `np.meshgrid` for creating 2D grids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52cbc99e-142e-4844-9862-d5f00ad72735",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "#### 2) Using `np.meshgrid()` to create 2D grids for plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6216471-0188-4e1d-ae72-5b53dba9bae2",
+   "metadata": {
+    "editable": false
+   },
+   "source": [
+    "`np.meshgrid()` is a NumPy function that creates coordinate matrices from coordinate vectors. It's particularly useful for creating 2D grids for plotting surfaces, contours, or evaluating functions over a 2D domain.\n",
+    "\n",
+    "**Basic Usage**:\n",
+    "```python\n",
+    "xx, yy = np.meshgrid(x_array, y_array)\n",
+    "```\n",
+    "\n",
+    "**What it does**:\n",
+    "- Takes two 1D arrays representing coordinates along x and y axes\n",
+    "- Returns two 2D arrays where every point (i,j) contains the x and y coordinates\n",
+    "- Creates a rectangular grid of points for 2D plotting\n",
+    "\n",
+    "**Example**:\n",
+    "```python\n",
+    "x = np.linspace(0, 2, 3)  # [0, 1, 2]\n",
+    "y = np.linspace(0, 1, 2)  # [0, 1]\n",
+    "xx, yy = np.meshgrid(x, y)\n",
+    "# xx = [[0, 1, 2],    yy = [[0, 0, 0],\n",
+    "#       [0, 1, 2]]          [1, 1, 1]]\n",
+    "```"
    ]
   },
   {
@@ -207,6 +361,8 @@
    },
    "outputs": [],
    "source": [
+    "### Your solution here\n",
+    "\n",
     "# Create data for x1 and y1 using 'np.linspace' and the numpy functions\n",
     "\n",
     "# Create data for x2 and y2 using 'np.linspace' and the numpy functions\n",
@@ -222,6 +378,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "026ffe9b-ce7d-4256-bd6e-ad9e7e98f77e",
+   "metadata": {
+    "editable": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Exercise 3: Create your own style"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "30924879-3237-44b2-b691-f63a1f80a67e",
    "metadata": {
     "editable": false,
@@ -231,10 +401,18 @@
     "tags": []
    },
    "source": [
-    "### **Task 2**: Try to build a presentation style and a publication style that fits your needs\n",
+    "### **Task** for Exercise 3: Try to build a presentation style and a publication style that fits your needs\n",
     "\n",
     "Available options can be found [here](https://github.com/matplotlib/matplotlib/blob/v3.8.4/lib/matplotlib/mpl-data/matplotlibrc). "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13e8e85b-3f72-41a4-b3ed-1dbd29fb8762",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
