--- a/Course/03_Matplotlib.ipynb
+++ b/Course/03_Matplotlib.ipynb
@@ -75,27 +75,30 @@
    "source": [
     "# Create data for plotting \u03c0 between 0 and 2*\u03c0\n",
     "x = np.linspace(0, 2*np.pi, 100)\n",
-    "y = np.sin(x)"
+    "y = np.sin(x)\n",
+    "\n",
+    "# Create a simple plot of a sin function using plt\n",
+    "plt.plot(x, y)\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('y')\n",
+    "\n",
+    "# Show the plot\n",
+    "#plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e06d4b",
+   "id": "a1c0a7c7-8de5-4356-a769-dd2d935f5195",
    "metadata": {
     "editable": true,
-    "remove_code": "non-comments",
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "# Create a simple plot of a sin function using plt\n",
-    "\n",
-    "# Show the plot\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -130,7 +133,8 @@
     "\n",
     "# Plot the data on the subplots\n",
     "\n",
-    "# Show plot\n"
+    "# Show plot\n",
+    "#plt.show()"
    ]
   },
   {
@@ -190,8 +194,10 @@
     "# Add legends to the subplots\n",
     "\n",
     "# Adjust the spacing between subplots\n",
+    "#fig.tight_layout()\n",
     "\n",
-    "# Show the plot\n"
+    "# Show the plot\n",
+    "#plt.show()"
    ]
   },
   {
@@ -260,7 +266,8 @@
     "\n",
     "# Customize plot appearance using grid and legend\n",
     "\n",
-    "# Show the plot\n"
+    "# Show the plot\n",
+    "#plt.show()"
    ]
   },
   {
@@ -318,7 +325,8 @@
     "\n",
     "# Demonstrate horizontal bar plot\n",
     "\n",
-    "# Show the plot\n"
+    "# Show the plot\n",
+    "#plt.show()"
    ]
   },
   {
@@ -365,7 +373,8 @@
     "\n",
     "# Create sorted horizontal bar plot\n",
     "\n",
-    "# Show the plot\n"
+    "# Show the plot\n",
+    "#plt.show()"
    ]
   },
   {
@@ -405,13 +414,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86873b14-658d-41fc-b84e-75a8f60badb5",
-   "metadata": {
-    "remove_code": "non-comments"
-   },
+   "id": "4157aada-b18e-48b8-b1a8-0f74c94d554b",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the plot style\n"
+    "# Set the plot style\n",
+    "plt.style.use('../mpl_styles/colors.mplstyle')\n",
+    "colors = ['C1', 'C1', 'C2', 'C2', 'C3', 'C4', 'C5']"
    ]
   },
   {
@@ -433,7 +442,8 @@
     "\n",
     "# Create the same sorted horizontal bar plot, but with colours\n",
     "\n",
-    "# Show the plot\n"
+    "# Show the plot\n",
+    "#plt.show()"
    ]
   },
   {
@@ -453,43 +463,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f6e1b3",
-   "metadata": {
-    "remove_code": "non-comments"
-   },
+   "id": "3b91fd43-f4ff-4bf0-afbe-b913329f73fd",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Apply style to plot\n",
-    "\n",
-    "    # Plot the data\n"
+    "with plt.style.context(('../mpl_styles/presentation.mplstyle')):\n",
+    "    # Plot the data\n",
+    "    plt.plot(np.sin(np.linspace(0, 2 * np.pi)), 'C1-o')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8235648",
-   "metadata": {
-    "remove_code": "non-comments"
-   },
+   "id": "b84d6086-fe3c-4fe7-8f67-58f35282e323",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Apply style to plot\n",
-    "\n",
-    "    # Plot the data\n"
+    "with plt.style.context((\n",
+    "    '../mpl_styles/publication.mplstyle',\n",
+    "    '../mpl_styles/publication_onecolumn.mplstyle')\n",
+    "):\n",
+    "    # Plot the data\n",
+    "    plt.plot(np.sin(np.linspace(0, 2 * np.pi)), 'C2-o')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795750e0",
-   "metadata": {
-    "remove_code": "non-comments"
-   },
+   "id": "f4381929-f222-4f55-b895-c57ba25a3d06",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Apply style to plot\n",
-    "\n",
-    "    # Plot the data\n"
+    "with plt.style.context((\n",
+    "    '../mpl_styles/publication.mplstyle',\n",
+    "    '../mpl_styles/publication_twocolumn.mplstyle'\n",
+    ")):\n",
+    "    # Plot the data\n",
+    "    plt.plot(np.sin(np.linspace(0, 2 * np.pi)), 'C2-o')"
    ]
   },
   {
@@ -527,7 +540,7 @@
    "execution_count": null,
    "id": "9e333843",
    "metadata": {
-    "remove_code": "after:# Plot the data"
+    "remove_code": "after:# Save the plot in a file"
    },
    "outputs": [],
    "source": [
@@ -543,6 +556,9 @@
     "    fig, ax = plt.subplots()\n",
     "\n",
     "    # Plot the data\n",
+    "    ax.plot(x, np.sin(x), 'C2')\n",
+    "    ax.set_xlabel('$x$')\n",
+    "    ax.set_ylabel(r'$\\sin(x)$ / a. u.')\n",
     "\n",
     "    # Save the plot in a file\n"
    ]
