Again minor updates due to mistakes

--- a/Course/03_Matplotlib.ipynb
+++ b/Course/03_Matplotlib.ipynb
@@ -75,15 +75,7 @@
    "source": [
     "# Create data for plotting \u03c0 between 0 and 2*\u03c0\n",
     "x = np.linspace(0, 2*np.pi, 100)\n",
-    "y = np.sin(x)\n",
-    "\n",
-    "# Create a simple plot of a sin function using plt\n",
-    "plt.plot(x, y)\n",
-    "plt.xlabel('x')\n",
-    "plt.ylabel('y')\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "y = np.sin(x)"
    ]
   },
   {
@@ -92,13 +84,18 @@
    "id": "a1c0a7c7-8de5-4356-a769-dd2d935f5195",
    "metadata": {
     "editable": true,
+    "remove_code": "non-comments",
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a simple plot of a sin function using plt\n",
+    "\n",
+    "# Show the plot\n"
+   ]
   },
   {
    "cell_type": "markdown",
