Remove verbose explanations and add weblinks to used functions

--- a/Filled_Course/03_Matplotlib_exercise.ipynb
+++ b/Filled_Course/03_Matplotlib_exercise.ipynb
@@ -61,14 +61,7 @@
    "id": "1700644d-c22e-4953-93b8-23a2e4fc121d",
    "metadata": {},
    "source": [
-    "**JSON (JavaScript Object Notation)** is a lightweight, text-based data interchange format that's easy for humans to read and write. Despite its name, JSON is language-independent and widely used for data storage and exchange.\n",
-    "\n",
-    "The `json.load()` function:\n",
-    "- Reads JSON data from a file object and converts it to Python data structures\n",
-    "- JSON objects become Python dictionaries\n",
-    "- JSON arrays become Python lists\n",
-    "\n",
-    "This is particularly useful for loading structured data like the Anscombe datasets we'll be working with."
+    "Use the [`json.load()`](https://docs.python.org/3/library/json.html#json.load) function to read JSON data from a file."
    ]
   },
   {
@@ -118,26 +111,7 @@
    "id": "85ff7c99-7c3c-4a50-8aaa-5b259599ccd7",
    "metadata": {},
    "source": [
-    "`np.polyfit()` is a NumPy function that performs polynomial fitting to data points. It finds the coefficients of a polynomial of specified degree that best fits the data using least squares regression.\n",
-    "\n",
-    "**Basic Usage**:\n",
-    "- **Simple fit**: `coefficients = np.polyfit(x, y, degree)`\n",
-    "- **Full output**: `coefficients, residuals, rank, singular_values = np.polyfit(x, y, degree, full=True)`\n",
-    "\n",
-    "**Parameters**:\n",
-    "- `x`, `y`: Input data points (arrays)\n",
-    "- `degree`: Degree of the polynomial (1 for linear, 2 for quadratic, etc.)\n",
-    "- `full=True`: Returns additional fitting statistics including residuals\n",
-    "\n",
-    "**For Linear Regression (degree=1):**\n",
-    "- Returns coefficients `[m, b]` for equation `y = mx + b`\n",
-    "- With `full=True`, also returns sum of squared residuals (measure of fit quality)\n",
-    "\n",
-    "**Companion Functions**:\n",
-    "- `np.polyval(coefficients, x)`: Evaluates the polynomial at given x values\n",
-    "- Useful for plotting the fitted line: `y_fit = np.polyval(coefficients, x_data)`\n",
-    "\n",
-    "This function is particularly useful for analysing relationships in data and creating trend lines for visualisation."
+    "Use [`np.polyfit()`](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html) to perform polynomial fitting to data points. Use [`np.polyval()`](https://numpy.org/doc/stable/reference/generated/numpy.polyval.html) to evaluate the polynomial at given values (useful for plotting fitted lines)."
    ]
   },
   {
@@ -185,7 +159,7 @@
     "### **Task** for Exercise 1:\n",
     "We can use [`np.polyfit`](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html) for a simple linear regression. Use this to visualise and fit [Anscombe's quartett](https://www.jstor.org/stable/2682899?seq=4) (compare your results with figures 1-4 in the article) using the data located in `exercise_data/anscombe.json`.\n",
     "\n",
-    "Visualise the points as scatter plots and show the regression line. Give labels to the axes and try to vary the colours of the individual components. Use `np.polyval()` to evaluate the fitted polynomial and create the regression line for plotting. If you want, you can also create a separate plot for the fitting statistics. For the reference about the plot types in Matplotlib (including scatter plots) look [here](https://matplotlib.org/stable/plot_types/index.html)."
+    "Visualise the points as scatter plots and show the regression line. Give labels to the axes and try to vary the colours of the individual components. Use [`np.polyval()`](https://numpy.org/doc/stable/reference/generated/numpy.polyval.html) to evaluate the fitted polynomial and create the regression line for plotting. If you want, you can also create a separate plot for the fitting statistics. For the reference about the plot types in Matplotlib (including scatter plots), look [here](https://matplotlib.org/stable/plot_types/index.html)."
    ]
   },
   {
@@ -241,41 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cca243a1-cb60-4315-8ed6-10bcdebd9796",
-   "metadata": {},
-   "source": [
-    "### Preparation for Exercise 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b5ed0ae2-d297-4cd1-a16c-e143e064347b",
-   "metadata": {},
-   "source": [
-    "Before starting Exercise 2, let's briefly introduce some additional Matplotlib plotting functions. For subplots created with `fig, axes = plt.subplots()`, you get access to each of them using the notation `axes[i,j]` at row `i` and column `j` (for 2D subplot grids). On each of them, you can choose which type of visualisations to create:\n",
-    "\n",
-    "**`axes[i,j].hist()`** - Creates histograms to show the distribution of data:\n",
-    "- Shows frequency of values in bins\n",
-    "- Useful for understanding data distribution\n",
-    "- Basic usage: `ax.hist(data, bins=number_of_bins)`\n",
-    "\n",
-    "**`axes[i,j].scatter()`** - Creates scatter plots to show relationships between two variables:\n",
-    "- Each point represents a data pair (x, y)\n",
-    "- Useful for showing correlations and patterns\n",
-    "- Basic usage: `ax.scatter(x_data, y_data)`\n",
-    "- Can customise with colours, sizes, and markers\n",
-    "\n",
-    "**`axes[i,j].matshow()`** - Displays 2D arrays as images/heatmaps:\n",
-    "- Each array element becomes a coloured pixel\n",
-    "- Useful for visualising matrices, grids, or 2D functions\n",
-    "- Basic usage: `ax.matshow(2d_array)`\n",
-    "- Colours represent different values in the array\n",
-    "\n",
-    "These functions, combined with `axes[i,j].plot()`, give you a versatile toolkit for creating different types of visualisations in your scientific figures."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8a72f158-6a42-4c83-a30b-fbc300080bde",
    "metadata": {
     "editable": true,
@@ -287,62 +226,7 @@
    "source": [
     "### **Task** for Exercise 2: Create a mock of graphs from your field\n",
     "\n",
-    "Create a selection of graphs using `np.linspace`, `np.random.rand` and the NumPy functions that are somewhat representative of a figure you might publish. Use Matplotlib functions such as `subplots()`, `plot()`, `hist()`, `scatter()`, and `matshow()` to create different types of visualisations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2786cb3-93f6-4753-a902-4fbfb8294334",
-   "metadata": {},
-   "source": [
-    "#### 1) Examples of NumPy functions:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03931940-804c-4805-aa8f-55fbc51595a3",
-   "metadata": {},
-   "source": [
-    "- `np.exp` for exponential function,\n",
-    "- `np.sqrt` for square root function,\n",
-    "- `np.sin` for sine function\n",
-    "- `np.cos` for cosine function\n",
-    "- `np.meshgrid` for creating 2D grids"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "52cbc99e-142e-4844-9862-d5f00ad72735",
-   "metadata": {},
-   "source": [
-    "#### 2) Using `np.meshgrid()` to create 2D grids for plotting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6216471-0188-4e1d-ae72-5b53dba9bae2",
-   "metadata": {},
-   "source": [
-    "`np.meshgrid()` is a NumPy function that creates coordinate matrices from coordinate vectors. It's particularly useful for creating 2D grids for plotting surfaces, contours, or evaluating functions over a 2D domain.\n",
-    "\n",
-    "**Basic Usage**:\n",
-    "```python\n",
-    "xx, yy = np.meshgrid(x_array, y_array)\n",
-    "```\n",
-    "\n",
-    "**What it does**:\n",
-    "- Takes two 1D arrays representing coordinates along x and y axes\n",
-    "- Returns two 2D arrays where every point (i,j) contains the x and y coordinates\n",
-    "- Creates a rectangular grid of points for 2D plotting\n",
-    "\n",
-    "**Example**:\n",
-    "```python\n",
-    "x = np.linspace(0, 2, 3)  # [0, 1, 2]\n",
-    "y = np.linspace(0, 1, 2)  # [0, 1]\n",
-    "xx, yy = np.meshgrid(x, y)\n",
-    "# xx = [[0, 1, 2],    yy = [[0, 0, 0],\n",
-    "#       [0, 1, 2]]          [1, 1, 1]]\n",
-    "```"
+    "Create a selection of graphs using [`np.linspace`](https://numpy.org/doc/stable/reference/generated/numpy.linspace.html#numpy-linspace), [`np.random.rand`](https://numpy.org/doc/stable/reference/random/generated/numpy.random.rand.html#numpy-random-rand) and the NumPy functions - like [`np.exp`](https://numpy.org/doc/stable/reference/generated/numpy.exp.html), [`np.sqrt`](https://numpy.org/doc/stable/reference/generated/numpy.sqrt.html), [`np.sin`](https://numpy.org/doc/stable/reference/generated/numpy.sin.html), [`np.cos`](https://numpy.org/doc/stable/reference/generated/numpy.cos.html) - that are somewhat representative of a figure you might publish. Use Matplotlib functions such as [`subplots()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplots.html), [`plot()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.plot.html), [`hist()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.hist.html), [`scatter()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.scatter.html), and [`matshow()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.matshow.html) to create different types of visualisations. Use [`np.meshgrid()`](https://numpy.org/doc/stable/reference/generated/numpy.meshgrid.html) to create 2D grids for plotting surfaces, contours, or evaluating functions over a 2D domain."
    ]
   },
   {
@@ -415,7 +299,9 @@
    "source": [
     "### **Task** for Exercise 3: Try to build a presentation style and a publication style that fits your needs\n",
     "\n",
-    "Available options can be found [here](https://github.com/matplotlib/matplotlib/blob/v3.8.4/lib/matplotlib/mpl-data/matplotlibrc). "
+    "Create custom matplotlib style files for different use cases (presentation vs. publication). You can use the plots created in Exercise 2 to test and demonstrate your different styles.\n",
+    "\n",
+    "Available style options can be found [here](https://github.com/matplotlib/matplotlib/blob/v3.8.4/lib/matplotlib/mpl-data/matplotlibrc)."
    ]
   },
   {
